--- a/src/template/htmlcss/snippet01.html
+++ b/src/template/htmlcss/snippet01.html
@@ -22,6 +22,7 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="htmlPage__inner">
+          <h2 class="c-childPage__title">HTMLテンプレート</h2>
           <section id="list01" class="template__header">
             <h3 class="secTitle">ヘッダ</h3>
             <script src="https://gist.github.com/HiroyukiYokoi/44545d1c9eb14b8442ae0a293f37f69d.js"></script>
