--- a/src/template/htmlcss/snippet02.html
+++ b/src/template/htmlcss/snippet02.html
@@ -22,6 +22,7 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="htmlPage__inner">
+          <h2 class="c-childPage__title">position: absolute;</h2>
           <section class="absolute__header">
             <h3 class="secTitle">親要素から位置を取得する</h3>
           </section>
