--- a/src/template/javascript/snippet01.html
+++ b/src/template/javascript/snippet01.html
@@ -24,7 +24,9 @@
         <div class="javascriptPage__inner">
           <section id="list01" class="spMenu__header">
             <h3 class="secTitle">全画面メニュー</h3>
-            <script src="https://gist.github.com/HiroyukiYokoi/44545d1c9eb14b8442ae0a293f37f69d.js"></script>
+            <h4 class="languageType">HTML</h4>
+            <h4 class="languageType">CSS</h4>
+            <h4 class="languageType">JavaScript</h4>
           </section>
         </div>
       </main>
