--- a/src/template/htmlcss/snippet01.html
+++ b/src/template/htmlcss/snippet01.html
@@ -31,7 +31,33 @@
             <h3 class="secTitle">フッタ</h3>
             <script src="https://gist.github.com/HiroyukiYokoi/12bf3e3a377bdbc4ff5c22160dc966dc.js"></script>
           </section>
-          <section id="list03" class="template__prefectures">
+          <section id="list03" class="template__ogpTop">
+            <h3 class="secTitle">OGP（トップ）</h3>
+            <script src="https://gist.github.com/HiroyukiYokoi/970ed64c5f58f1af76fad46a3e3cabf7.js"></script>
+          </section>
+          <section id="list04" class="template__ogpLawer">
+            <h3 class="secTitle">OGP（下層）</h3>
+            <script src="https://gist.github.com/HiroyukiYokoi/3b46b9cbd50ed60b5e18d374cd714e0f.js"></script>
+          </section>
+          <section id="list05" class="template__favicon">
+            <h3 class="secTitle">Favicon</h3>
+            <script src="https://gist.github.com/HiroyukiYokoi/bfc56cb22f4a2cc9640cdd4de55b35f7.js"></script>
+          </section>
+          <section id="list06" class="template__viewport">
+            <h3 class="secTitle">viewport</h3>
+            <div>Landscape時サイズ固定、拡大・縮小無効</div>
+            <script src="https://gist.github.com/HiroyukiYokoi/729c680c2c3609931dc91796f5565948.js"></script>
+          </section>
+          <section id="list07" class="template__viewport">
+            <h3 class="secTitle">ダミー画像</h3>
+            <div>出力例（シンプル）</div>
+            <div><img src="http://placehold.it/350x150" alt="ダミー画像出力例シンプル"></div>
+            <script src="https://gist.github.com/HiroyukiYokoi/0aae316521c51e043afeacd6faf0b324.js"></script>
+            <div>出力例（背景色、フォント色、テキスト打ち込み付き）</div>
+            <div><img src="http://placehold.it/700x150/b7ab86/666&amp;text=こんにちは" alt="ダミー画像出力例詳細付き"></div>
+            <script src="https://gist.github.com/HiroyukiYokoi/05cc916e325f5c1b39bb7238c94df1c3.js"></script>
+          </section>
+          <section id="list99" class="template__prefectures">
             <h3 class="secTitle">都道府県一覧</h3>
             <script src="https://gist.github.com/HiroyukiYokoi/d361b544b6fd64e3cac9f2ed10040ce4.js"></script>
           </section>
