--- a/src/css/object/_p-javascript_page.scss
+++ b/src/css/object/_p-javascript_page.scss
@@ -1,17 +1,288 @@
 @charset "utf-8";
-
 /*
 @include sp($point-sp)
 @include pc($point-pc) {}
 */
-
 .javascriptPage {
   &__inner {
-    padding: 0 40px;
+    @include sp($point-sp) {
+      padding: 0 30px;
+    }
+    @include pc($point-pc) {
+      padding: 0 80px;
+    }
   }
-  &.spMenu {
-    .spMenu {
 
+  &.spMenu {
+    .spMenu {}
+    .exam01 {
+      display: block;
+      border: 1px solid #aaa;
+      @include sp($point-sp) {
+        margin: 0 auto 40px;
+      }
+      @include pc($point-pc) {
+        margin: 0 auto 60px;
+      }
+    }
+    &.iframe {
+      .l-container {
+        @include sp($point-sp) {
+          padding: 0;
+        }
+      }
+      .l-header {
+        &__logo {
+          margin: 0 auto;
+          @include pc($point-pc) {
+          }
+          @include sp($point-sp) {
+            // width: (197px / 2);
+            // height: (197px / 2);
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+          }
+          &Img {
+            a {
+              display: block;
+              @include pc($point-pc) {
+              }
+              @include sp($point-sp) {
+                width: 80px; //logoのwidth
+                height: 80px; //logoのheight
+                margin: 0 auto;
+              }
+              img {
+                position: absolute;
+                @include pc($point-pc) {
+                }
+                @include sp($point-sp) {
+                  // width: 53px;
+                  // height: 60px;
+                  // top: 11px;
+                  // left: 21px;
+                }
+              }
+            }
+          }
+        }
+      }
+      .l-gNav {
+        @include pc($point-pc) {
+        }
+        @include sp($point-sp) {
+          position: fixed;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          z-index: 2000;
+          background-color: rgba(140, 33, 10, 0.92);
+          text-align: center;
+          overflow: scroll;
+          max-height: 100vh;
+          padding: 0 0 70px;
+        }
+
+        &.is-open {
+          @include sp($point-sp) {
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
+          }
+
+          &.transition {
+            -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+            -webkit-transition: all 0.6s;
+            transition: all 0.6s;
+          }
+        }
+
+        &.is-close {
+          @include sp($point-sp) {
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
+            // transition-duration: 0;
+          }
+
+          &.transition {
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+            -webkit-transition: all 0.6s;
+            transition: all 0.6s;
+          }
+        }
+
+        &__sp {
+          @include pc($point-pc) {
+            display: none;
+          }
+          @include sp($point-sp) {
+            width: 100%;
+            height: 49px;
+            background-color: #ca391b;
+          }
+        }
+
+        &__btn {
+          width: 100%;
+          height: 49px;
+          position: relative;
+
+          a {
+            display: block;
+            width: 25px;
+            height: 18px;
+            border-top: 2px solid #fff;
+            border-bottom: 2px solid #fff;
+            position: absolute;
+            top: 15px;
+            right: 15px;
+
+            &:before {
+              content: "";
+              display: block;
+              width: 25px;
+              height: 2px;
+              background: #fff;
+              position: absolute;
+              top: 6px;
+              right: 0;
+            }
+
+            span {
+              display: none;
+            }
+          }
+        }
+
+        &__close {
+          @include pc($point-pc) {
+            display: none;
+          }
+          @include sp($point-sp) {
+            position: absolute;
+            right: 0;
+            top: 0;
+
+            a {
+              width: 56px;
+              height: 56px;
+              display: inline-block;
+              position: absolute;
+              top: 18px;
+              right: 19px;
+              z-index: 1000;
+
+              &:after,
+              &:before {
+                content: "";
+                width: 48px;
+                height: 1px;
+                background: #fff;
+                display: block;
+                position: absolute;
+                z-index: 2001;
+                top: 26px;
+                right: 4px;
+              }
+
+              &:before {
+                -webkit-transform: rotate(45deg);
+                transform: rotate(45deg);
+              }
+
+              &:after {
+                -webkit-transform: rotate(-45deg);
+                transform: rotate(-45deg);
+              }
+
+              span {
+                display: none;
+              }
+            }
+          }
+        }
+
+        &__list {
+          @include pc($point-pc) {
+          }
+          @include sp($point-sp) {
+            position: relative;
+            top: 29px;
+            list-style: none;
+            border: none;
+          }
+
+          &Item {
+            @include pc($point-pc) {
+            }
+            @include sp($point-sp) {
+              width: 200px;
+              margin: 0 auto;
+            }
+
+            a {
+              position: relative;
+              display: inline-block;
+              @include pc($point-pc) {
+              }
+              @include sp($point-sp) {
+                // margin: 0 0 8px;
+                // padding: 0 0 10px;
+                height: 65px;
+                padding: 16px 0 0;
+                // margin: 0 0 5px;
+              }
+
+              &:after {
+                @include pc($point-pc) {
+                }
+              }
+
+              &:hover {
+                &:after {
+                  @include pc($point-pc) {
+                  }
+                }
+                @include sp($point-sp) {
+                  border-bottom: 2px solid #fff;
+                }
+              }
+            }
+
+            &En {
+              color: #fff;
+              display: block;
+              @include pc($point-pc) {
+              }
+              @include sp($point-sp) {
+                font-size: 25px;
+                letter-spacing: 2px;
+                line-height: 1;
+                margin: 0 0 4px;
+              }
+            }
+
+            &Jp {
+              display: block;
+              //  font-weight: bold;
+              position: relative;
+              @include pc($point-pc) {
+              }
+              @include sp($point-sp) {
+                font-size: 12px;
+                color: #d7a9a9;
+                line-height: 1;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
