SPメニューブラウザ幅リサイズ時のSPメニューのちらつき防止途中

--- a/src/template/_include/javascript.html
+++ b/src/template/_include/javascript.html
@@ -1,6 +1,6 @@
 <!-- *** JavaScript *** -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
