--- a/src/template/htmlcss/snippet01.html
+++ b/src/template/htmlcss/snippet01.html
@@ -21,7 +21,7 @@
 
     <div class="l-contents">
       <main class="l-main">
-        <div class="htmlPage__inner">
+        <div class="html inner">
           <h2 class="c-childPage__title">HTMLテンプレート</h2>
           <section id="list01" class="template__header">
             <h3 class="secTitle">ヘッダ</h3>
