--- a/src/template/htmlcss/snippet03.html
+++ b/src/template/htmlcss/snippet03.html
@@ -21,7 +21,7 @@
 
     <div class="l-contents">
       <main class="l-main">
-        <div class="htmlPage__inner">
+        <div class="html inner">
           <section id="list01" class="flex__centerUpDown">
             <h3 class="secTitle">上下中央揃え</h3>
 
