--- a/src/template/index.html
+++ b/src/template/index.html
@@ -67,8 +67,8 @@
               </li>
               <li class="index__listItem">SPメニュー
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/javascript/snippet01.html#list01">全画面メニュー</a></li>
-                  <li class="childList__item"><a href="/javascript/snippet01.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="/javascript/snippet02.html#list01">全画面メニュー<br>;;html_sp_menu_pt01.html<br>;;scss_sp_menu_pt01<br>;;jq_sp_menu_pt01</a></li>
+                  <li class="childList__item"><a href="/javascript/snippet02.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br></a></li>
                 </ul>
               </li>
               <li class="index__listItem">プラグイン
