--- a/src/css/_foundation.scss
+++ b/src/css/_foundation.scss
@@ -15,6 +15,28 @@ html>body {
   color: #F42858;
 }
 
+.inner {
+  @include sp($point-sp) {
+    padding: 0 30px;
+  }
+  @include pc($point-pc) {
+    padding: 0 80px;
+  }
+}
+
+.c-childPage__title {
+  margin: 0 0 50px;
+}
+
+.secTitle {
+  @include sp($point-sp) {
+    margin: 40px 0 10px;
+  }
+  @include pc($point-pc) {
+    margin: 60px 0 20px;
+  }
+}
+
 a {
   text-decoration: none;
   outline: none;
