--- a/src/css/object/_p-javascript_page.scss
+++ b/src/css/object/_p-javascript_page.scss
@@ -4,17 +4,9 @@
 @include pc($point-pc) {}
 */
 .javascriptPage {
-  &__inner {
-    @include sp($point-sp) {
-      padding: 0 30px;
-    }
-    @include pc($point-pc) {
-      padding: 0 80px;
-    }
-  }
-
   &.spMenu {
     .spMenu {}
+
     .exam01 {
       display: block;
       border: 1px solid #aaa;
@@ -25,52 +17,61 @@
         margin: 0 auto 60px;
       }
     }
+
     &.iframe {
       .l-container {
-        @include sp($point-sp) {
-          padding: 0;
-        }
+        padding: 0;
       }
+
       .l-header {
         &__logo {
           margin: 0 auto;
           @include pc($point-pc) {
+            position: absolute;
+            width: 195px;
+            height: 196px;
+            left: 0;
+            right: 0;
+            top: 0;
           }
           @include sp($point-sp) {
-            // width: (197px / 2);
-            // height: (197px / 2);
             position: fixed;
             left: 0;
             right: 0;
             top: 0;
           }
+
           &Img {
             a {
               display: block;
               @include pc($point-pc) {
+                width: 195px;
+                height: 196px;
               }
               @include sp($point-sp) {
-                width: 80px; //logoのwidth
-                height: 80px; //logoのheight
+                width: 80px;
+                height: 80px;
                 margin: 0 auto;
               }
+
               img {
                 position: absolute;
                 @include pc($point-pc) {
                 }
                 @include sp($point-sp) {
-                  // width: 53px;
-                  // height: 60px;
-                  // top: 11px;
-                  // left: 21px;
+                  width: 80px;
+                  height: 80px;
                 }
               }
             }
           }
         }
       }
+
       .l-gNav {
         @include pc($point-pc) {
+          background-color: #ca391b;
+          height: 110px;
         }
         @include sp($point-sp) {
           position: fixed;
@@ -209,17 +210,22 @@
         }
 
         &__list {
+          list-style: none;
+          border: none;
           @include pc($point-pc) {
+            width: 1140px;
+            margin: 0 auto;
+            padding: 0;
+            text-align: center;
           }
           @include sp($point-sp) {
             position: relative;
             top: 29px;
-            list-style: none;
-            border: none;
           }
 
           &Item {
             @include pc($point-pc) {
+              display: table-cell;
             }
             @include sp($point-sp) {
               width: 200px;
@@ -230,6 +236,9 @@
               position: relative;
               display: inline-block;
               @include pc($point-pc) {
+                text-decoration: none;
+                padding: 33px 0 34px;
+                margin: 0 5px;
               }
               @include sp($point-sp) {
                 // margin: 0 0 8px;
@@ -239,14 +248,10 @@
                 // margin: 0 0 5px;
               }
 
-              &:after {
-                @include pc($point-pc) {
-                }
-              }
-
               &:hover {
                 &:after {
                   @include pc($point-pc) {
+                    background-color: #fff;
                   }
                 }
                 @include sp($point-sp) {
@@ -259,6 +264,8 @@
               color: #fff;
               display: block;
               @include pc($point-pc) {
+                font-size: 17px;
+                letter-spacing: 1.1px;
               }
               @include sp($point-sp) {
                 font-size: 25px;
@@ -273,6 +280,9 @@
               //  font-weight: bold;
               position: relative;
               @include pc($point-pc) {
+                color: rgba(255, 255, 255, 0.54);
+                font-size: 10px;
+                top: -4px;
               }
               @include sp($point-sp) {
                 font-size: 12px;
@@ -283,6 +293,41 @@
           }
         }
       }
+      &.notGood {
+        .l-gNav {
+          &.is-open {
+            @include sp($point-sp) {
+              opacity: 1;
+              visibility: visible;
+              pointer-events: auto;
+              -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+              -webkit-transition: all 0.6s;
+              transition: all 0.6s;
+            }
+          }
+          &.is-close {
+            @include sp($point-sp) {
+              opacity: 0;
+              visibility: hidden;
+              pointer-events: none;
+              // transition-duration: 0;
+              -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+              -webkit-transition: all 0.6s;
+              transition: all 0.6s;
+            }
+          }
+        }
+      }
+    }
+
+    .exam02,
+    .exam03,
+    .ui-widget-content {
+      width: 320px;
+      height: 568px;
+      margin: 0 0 60px;
     }
   }
 }
