--- a/src/template/_include/head.html
+++ b/src/template/_include/head.html
@@ -19,6 +19,6 @@
 <meta name="twitter:image" content="http:///img/common/ogp.png">
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/css/vendor/ress.css">
 <link rel="stylesheet" href="/css/style.css">
-
