--- a/src/template/javascript/sp_menu/exam02.html
+++ b/src/template/javascript/sp_menu/exam02.html
@@ -8,7 +8,7 @@
   @@include('head.html')
 </head>
 
-<body class="javascriptPage spMenu iframe">
+<body class="javascriptPage spMenu iframe notGood">
   <div class="l-container">
     <!--include START-->
     <header class="l-header">
