--- a/src/template/index.html
+++ b/src/template/index.html
@@ -49,8 +49,13 @@
               </li>
               <li class="index__listItem"><a href="/htmlcss/snippet04.html">疑似要素</a>
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">矢印</a></li>
-                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">画像のborder</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">矢印<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">画像のborder<br>（準備中）</a></li>
+                </ul>
+              </li>
+              <li class="index__listItem"><a href="/htmlcss/snippet04.html">テンプレートエンジン（基礎出来てから）</a>
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">Pug<br>（準備中）</a></li>
                 </ul>
               </li>
             </ul>
@@ -78,6 +83,16 @@
                   <li class="childList__item"><a href="">EndlessRiver<br>（準備中）</a></li>
                 </ul>
               </li>
+              <li class="index__listItem">Ajax
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">Swiper<br>（準備中）</a></li>
+                </ul>
+              </li>
+              <li class="index__listItem">自作JavaScript
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">スライダー<br>（準備中）</a></li>
+                </ul>
+              </li>
             </ul>
           </section>
 
@@ -92,16 +107,52 @@
             </ul>
           </section>
 
+          <section id="git" class="index__git">
+            <h3 class="secTitle">Git</h3>
+            <ul class="index__list">
+              <li class="index__listItem">覚えておきたいコマンド
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">（準備中）</a></li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+
+          <section id="ruby" class="index__ruby">
+            <h3 class="secTitle">Ruby &amp; Ruby on Rails</h3>
+            <ul class="index__list">
+              <li class="index__listItem">環境構築
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">（準備中）</a></li>
+                </ul>
+              </li>
+              <li class="index__listItem">Rubyテンプレート
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">正規表現<br>（準備中）</a></li>
+                </ul>
+              </li>
+              <li class="index__listItem">Twitterもどき
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">（準備中）</a></li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+
           <section id="php" class="index__php">
             <h3 class="secTitle">PHP</h3>
             <ul class="index__list">
               <li class="index__listItem">フォーム
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">バリデーション付き<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="/php/snippet01.html#list01">一式<br>（準備中）</a></li>
+                </ul>
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/php/snippet01.html#list02">バリデーション<br>（準備中）</a></li>
                 </ul>
               </li>
             </ul>
           </section>
+
         </div>
       </main>
     </div>
