一旦コミット

--- a/src/template/php/snippet01.html
+++ b/src/template/php/snippet01.html
@@ -26,7 +26,7 @@
           <section id="list01" class="form__header">
             <h3 class="secTitle">一式</h3>
             <h4 class="exampleTitle">入力確認画面に遷移させる場合（非同期通信はしない）</h4>
-            <div>このフォームは動作確認の為、機能しております。送信すると横井に送られますのでご注意ください。<br>
+            <div>このフォームは動作確認の為、機能しております。送信すると横井に送られますので送りたい方はどうぞ。<br>
             ローカルではmail.phpが機能しないので注意。</div>
             <div>出力結果</div>
             <div class="Contact">
