一旦コミット

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -107,6 +107,21 @@
             </ul>
           </section>
 
+          <section id="php" class="index__php">
+            <h3 class="secTitle">PHP</h3>
+            <ul class="index__list">
+              <li class="index__listItem">フォーム
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/php/snippet01.html#list01">一式<br>（準備中）</a></li>
+                </ul>
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/php/snippet01.html#list02">バリデーション<br>（準備中）</a></li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+
+          <h2>番外編</h2>
           <section id="git" class="index__git">
             <h3 class="secTitle">Git</h3>
             <ul class="index__list">
@@ -134,20 +149,6 @@
               <li class="index__listItem">Twitterもどき
                 <ul class="index__childList">
                   <li class="childList__item"><a href="">（準備中）</a></li>
-                </ul>
-              </li>
-            </ul>
-          </section>
-
-          <section id="php" class="index__php">
-            <h3 class="secTitle">PHP</h3>
-            <ul class="index__list">
-              <li class="index__listItem">フォーム
-                <ul class="index__childList">
-                  <li class="childList__item"><a href="/php/snippet01.html#list01">一式<br>（準備中）</a></li>
-                </ul>
-                <ul class="index__childList">
-                  <li class="childList__item"><a href="/php/snippet01.html#list02">バリデーション<br>（準備中）</a></li>
                 </ul>
               </li>
             </ul>
