--- a/src/template/_include/l-gnav.html
+++ b/src/template/_include/l-gnav.html
@@ -11,11 +11,11 @@
         <span class="l-gNav__listItemEn">HTML/CSS</span>
       </a>
     </li>
-    <li class="l-gNav__listItem">
+    <!-- <li class="l-gNav__listItem">
       <a href="/#javascript">
         <span class="l-gNav__listItemEn">JavaScript</span>
       </a>
-    </li>
+    </li> -->
     <li class="l-gNav__listItem">
       <a href="/#svg">
         <span class="l-gNav__listItemEn">SVG</span>
