内容差し替え

--- a/src/css/object/_l-footer.scss
+++ b/src/css/object/_l-footer.scss
@@ -36,3 +36,14 @@
     }
   }
 }
+
+.l-footer {
+  display: block;
+  width: 100%;
+  height: auto;
+  &__img {
+    display: block;
+    text-align: center;
+    padding: 20px 0;
+  }
+}
