--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,7 @@
 @import "object/_l-footer";
 @import "object/_l-gnav";
 @import "object/_l-header";
+@import "object/_l-subPage";
 
 /* ==========================================================================
    Object
@@ -33,6 +34,7 @@
    ----------------------------------------------------------------- */
 
 @import "object/_p-index";
-@import "object/_p-html_page";
-@import "object/_p-javascript_page";
-@import "object/_p-php_page";
+@import "object/_p-css_animation";
+// @import "object/_p-html_page";
+// @import "object/_p-javascript_page";
+// @import "object/_p-php_page";
