--- a/src/template/index.html
+++ b/src/template/index.html
@@ -22,6 +22,16 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="index__inner">
+          <ul class="index__list">
+            <li class="index__listItem">
+              <a href="/css_animation/">
+                <h3 class="listItem__title">CSS animation</h3>
+                <div class="listItem__image">
+                  <img src="/img/index/CSS3_Logo.svg" width="350" height="150" alt="CSS3_Logo">
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </main>
     </div>
