--- a/src/css/_foundation_2017-06-23.scss
+++ b/src/css/_foundation_2017-06-23.scss
@@ -7,9 +7,8 @@ body {
 }
 
 html>body {
-  max-width: 980px;
+  // min-width: 980px;
   color: #111;
-  margin: 0 auto;
 }
 
 .red {
@@ -29,20 +28,13 @@ html>body {
   margin: 0 0 50px;
 }
 
-.codeQuote__short {
-  background: #fffe9f;
-  padding: 0 10px;
-  border-radius: 5px;
-  color: #ff5e5e;
+.secTitle {
   @include sp($point-sp) {
+    margin: 40px 0 10px;
   }
   @include pc($point-pc) {
-    font-size: 14px;
+    margin: 60px 0 20px;
   }
-}
-
-ul {
-  list-style: none;
 }
 
 a {
