--- a/src/template/_include/javascript.html
+++ b/src/template/_include/javascript.html
@@ -6,3 +6,5 @@
 <script type="text/javascript" src="/js/vendor/jquery-scrollpanel-0.7.0.min.js"></script>
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/map.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfA9UyN24AWaATnDcxoRosNo7SxbqnStI&callback=initMap"></script>
