--- a/src/template/index.html
+++ b/src/template/index.html
@@ -23,11 +23,19 @@
       <main class="l-main">
         <div class="index__inner">
           <ul class="index__list">
-            <li class="index__listItem">
+            <li class="index__listItem cssAnimation">
               <a href="/css_animation/">
                 <h3 class="listItem__title">CSS animation</h3>
                 <div class="listItem__image">
-                  <img src="/img/index/CSS3_Logo.svg" width="350" height="150" alt="CSS3_Logo">
+                  <img src="/img/index/CSS3_Logo.svg" width="150" height="150" alt="CSS3_Logo">
+                </div>
+              </a>
+            </li>
+            <li class="index__listItem googleAPI">
+              <a href="/google_api/">
+                <h3 class="listItem__title">Google API</h3>
+                <div class="listItem__image">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" width="200" height="150" alt="Google_2015_logo">
                 </div>
               </a>
             </li>
