--- a/src/css/object/_l-header.scss
+++ b/src/css/object/_l-header.scss
@@ -7,13 +7,24 @@
 @include pc02($point-pc02) {}
 */
 
+.l-header {
+  @include sp($point-sp) {
+    position: fixed;
+    border-bottom: 1px solid #aaa;
+    width: 100%;
+    top: 0;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 10px 0;
+  }
+}
+
 .site_title {
   text-align: center;
-  font-size: 32px;
   @include sp($point-sp) {
-    margin: 0 auto 30px;
+    font-size: 16px;
   }
   @include pc($point-pc) {
+    font-size: 32px;
     margin: 0 auto 60px;
   }
 }
