--- a/src/css/object/_p-index.scss
+++ b/src/css/object/_p-index.scss
@@ -9,7 +9,7 @@
   .index {
     &__inner {
       @include sp($point-sp) {
-        padding: 0 20px;
+        padding: 50px 20px 0;
       }
       @include pc($point-pc) {
         padding: 0 80px;
@@ -31,6 +31,7 @@
           width: 80vw;
         }
         @include pc($point-pc) {
+          margin: 0 20px;
         }
         a {
           display: flex;
@@ -46,7 +47,6 @@
         .listItem {
           &__title {
             font-weight: normal;
-            background: #0D57A7;
             color: #fff;
             padding: 10px 20px;
             @include sp($point-sp) {
@@ -57,11 +57,26 @@
             }
           }
           &__image {
+            padding: 0 20px;
             img {
               @include sp($point-sp) {
                 width: 40vw;
-                height: auto;
+                height: 250px;
               }
+            }
+          }
+        }
+        &.cssAnimation {
+          .listItem {
+            &__title {
+              background: #0D57A7;
+            }
+          }
+        }
+        &.googleAPI {
+          .listItem {
+            &__title {
+              background: #EA4335;
             }
           }
         }
