--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -35,6 +35,7 @@
 
 @import "object/_p-index";
 @import "object/_p-css_animation";
+@import "object/_p-google_api";
 // @import "object/_p-html_page";
 // @import "object/_p-javascript_page";
 // @import "object/_p-php_page";
